--- a/backend/views/download.ejs
+++ b/backend/views/download.ejs
@@ -13,7 +13,7 @@
 
 
     <section class="download">
-        <img class="download__icon" src="/img/download-sd.svg" alt="inshare-download">
+        <img class="download__icon" src="/img/download-sd.svg" alt="download">
         <% if(locals.error){ %>
         <h4><%= locals.error %> 😏</h4>
         <% } else { %>
